--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -36,13 +36,10 @@ menu {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    height: auto;
+    height: 50px;
 }
 
-button {
-    width: 100%;
-    flex-grow: 2;
-} 
+
 
 /* nav {
     display:flex
