--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -3,24 +3,24 @@ body {
     display: grid;
     height: 100vh;
     /* grid-template: ROWS/COLUMNS */
-    grid-template: 150px 1fr 150px/2fr  1fr;
+    grid-template: 100px 1fr 150px/2fr  1fr;
 }
 
 header {
-    height: 150px;
+    /* height: 150px; */
     grid-column: 1/4;
-    grid-row: 1/3;
+    grid-row: 1/2;
     position: relative;
     background-color: hwb(180 0% 0%);
 
 }
 
-.above-menu {
+/* .above-menu {
     padding-left: 25px;
     grid-column: 1/4;
     grid-row: 1/2;    
-    /* height: 100px; */
-}
+    height: 100px;
+} */
 
 nav {
     height: 50px;
@@ -28,7 +28,7 @@ nav {
     bottom: 0px
     
 }
-menu {
+ul {
     grid-column: 1/2;
     grid-row: 1/2;
     background-color: black;
