--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -15,6 +15,10 @@ header {
 
 }
 
+h1 {
+    padding-left: 50px;
+}
+
 /* .above-menu {
     padding-left: 25px;
     grid-column: 1/4;
@@ -28,7 +32,7 @@ nav {
     bottom: 0px
     
 }
-ul {
+.menu {
     grid-column: 1/2;
     grid-row: 1/2;
     background-color: black;
@@ -37,6 +41,7 @@ ul {
     justify-content: space-evenly;
     align-items: center;
     height: 50px;
+
 }
 
 
@@ -49,6 +54,8 @@ main {
     grid-column: 1;
     background-color: #407899;
     /* padding-left: 25px; */
+    padding-left: 50px;
+    padding-top: 50px;
 
 }
 
@@ -57,6 +64,7 @@ aside {
     grid-column: 2;
     background-color: #791e94;
     padding-left: 25px;
+    padding-top: 50px;
 }
 
 footer{
