--- a/styles/base.css
+++ b/styles/base.css
@@ -1,16 +1,9 @@
 body {
     height: 100vh;
     /* grid-template: ROWS/COLUMNS */
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
     
-}
-
-main {
-    display: grid;
-    width: 1000px;
-    grid-template: 50px 1fr 150px/2fr  1fr;
-    margin: auto;
-    gap: 10px;
-    color: white;
 }
 
 header {
@@ -24,12 +17,13 @@ h1 {
     text-align: center;
     line-height: 75px;
     margin: 0;
+    font-weight: 700;
 }
 
 
 nav {
     height: 50px;
-    
+    font-weight: 300;   
 }
 
 .active {
@@ -40,7 +34,7 @@ nav {
     display: flex;
     justify-content: space-evenly;
     /* align-items: center; */
-    height: 50px;
+    height: 55px;
     /* margin: 0; */
 }
 
@@ -48,30 +42,47 @@ nav {
     color: white;
     text-decoration: none;
     text-align: center;
-    width: 100px;
+    width: 15%;
+    max-width: 150px;
     height: 40px;
     display: flex;
     align-items: center;
+    align-self: center;
     justify-content: center;
     border: 2px solid transparent; /* Reserve space */
     
 }
 
-    .menu a:hover {
-        background-color: rgb(0, 255, 255);
-        outline: 2px solid black;
-        color: black;
-        border-style: solid;
-        
-    }
+.menu a:hover {
+    background-color: rgb(0, 255, 255);
+    outline: 2px dashed black;
+    color: black;
+    /* border-style: dashed; */
+    
+}
+
+
+main {
+  display: grid;
+  width: 90%;
+  max-width: 1500px;
+  grid-template: 50px 1fr 150px/2fr  1fr;
+  margin: auto;
+  gap: 10px;
+  color: white;
+}
 
  .card {
     grid-row:2/4;
     border-radius: 25px 25px 0px 0px;
+    display: flexbox;
+    position: relative;
+    margin-top: 8px;
  }
 
  .card p {
     padding: 25px;
+    color: #000000;
     
  }
 
@@ -82,7 +93,18 @@ nav {
     background-color: #c4c6e7;
     outline: 4px solid #791e94;
     margin-right: 10px;
+    
     /* margin-top: 15; */
+
+}
+
+.photo {
+  /* display: flex; */
+  align-self: right;
+  margin: 25px;
+  box-shadow: 8px 10px #0f0f0f41;
+  float: right;
+  width: 150px;
 
 }
 
@@ -112,7 +134,7 @@ nav {
 }
 
 footer{
-    margin-top: 10px;
+    margin-top: 15px;
     grid-column: 1/4;
     /* background-color: #c4c6e7; */
     background-color: #407899;
