done? lets audit it

--- a/styles/base.css
+++ b/styles/base.css
@@ -139,8 +139,8 @@ footer{
     /* background-color: #c4c6e7; */
     background-color: #407899;
     text-align: center;
-    height: 50px;
-    display: flex;
+    /* height: 50px; */
+    /* display: flex; */
     /* justify-content: center; */
     padding: 15px;
     color: white;
