--- a/styles/base.css
+++ b/styles/base.css
@@ -1,5 +1,5 @@
 body {
-    height: 100vh;
+    /* height: 100vh; */
     /* grid-template: ROWS/COLUMNS */
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
@@ -77,10 +77,15 @@ main {
     border-radius: 25px 25px 0px 0px;
     position: relative;
     margin-top: 8px;
+    /* padding: 15px; */
  }
 
- .card p {
+ .card :not(.top-rounded-bar) img:not() {
     padding: 25px;
+ }
+
+ .card p, h3, h2:not(.top-bar-text) {
+    margin: 20px;
     color: #000000;
     
  }
@@ -93,12 +98,16 @@ main {
     outline: 4px solid #791e94;
     margin-right: 10px;
     
+    
     /* margin-top: 15; */
 
 }
 
+#leftcard h3:not() :not(.top-rounded-bar) {
+    padding: 25px;
+}
+
 .photo {
-  /* display: flex; */
   margin: 25px;
   box-shadow: 8px 10px #0f0f0f41;
   float: right;
@@ -106,11 +115,21 @@ main {
 
 }
 
+#rocks {
+    max-width: 1000px;
+    width: 60%;
+    display: block;
+    margin: auto;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    
+}
+
 #rightcard {
     grid-column: 2/3;
     background-color: #c4c6e7;
     outline: 4px solid #791e94;
-    margin-right: -4px;
+    /* margin-right: -4px; */
     
 }
 
