--- a/styles/temples.css
+++ b/styles/temples.css
@@ -8,13 +8,18 @@ body {
 
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 #title-box {
     background-color: #edafb8;
     margin: 0px;
     padding: 10px;
     text-shadow: 2px 2px 0 white;
     padding-left: 25px;
-
 }
 
 .hamburger {
@@ -22,16 +27,48 @@ body {
     flex-direction:column;
     cursor: pointer;
     padding: 10px;
+    width: fit-content;
+    border-radius: 10px;
+    border: 5px none;
+    background-color: #4a5759;
+}
+
+.hamburger.active{
+    background-color: white;
+    /* border: 5px solid */
 }
 .hamburger .line {
     width: 30px;
     height: 3px;
-    background-color: black;
+    background-color: white;
     margin: 5px 0;
     transition: all 0.3s ease;
 }
+.hamburger.active .line:nth-child(2) {
+    opacity: 1;
+}
+
+.hamburger.active .line {
+    background-color: black;
+}
+
+
+.hamburger.active .line:nth-child(1) {
+    transform: rotate(45deg) translate(10px, 9px);
+
+}
+
+.hamburger.active .line:nth-child(2) {
+    opacity: 0;
+}
+
+.hamburger.active .line:nth-child(3) {
+    /* transform: rotate(-45deg) translate(10px, -10px); */
+    transform: rotate(-45deg) translate(9px, -10px);
+}
+
 .menu {
-    display: none;
+    display: flex;
     justify-content: space-evenly;
     width: 100%;
     height: 75px;
@@ -42,9 +79,7 @@ body {
 
 }
 
-.menu.active {
-    display: flex;
-}
+
 
 .menu-tags {
     font-size: 1.5em;
@@ -103,9 +138,24 @@ figcaption {
 
 
 
+
 @media (max-width: 768px) {
     .hamburger {
-        
+        margin: 25px;
+        display: flex;
+    }
+    .menu {
+        display: none;
+        flex-direction: column;
+        height: fit-content;
+        width: 100%;
+
+    }
+    .menu-tags{
+        margin: 10px;
+    }
+
+    .menu.active {
         display: flex;
     }
 }
