--- a/styles/temples.css
+++ b/styles/temples.css
@@ -79,7 +79,15 @@ body {
 
 }
 
+#menu-tag-container {
+    margin: auto;
+    padding: 0px;
+    width: 100%;
+    max-width: 900px;
+    justify-content: space-evenly;
+    display: flex;
 
+}
 
 .menu-tags {
     font-size: 1.5em;
