--- a/styles/temples.css
+++ b/styles/temples.css
@@ -69,7 +69,7 @@ body {
 
 .menu {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     width: 100%;
     height: 75px;
     background-color: #4a5759;
@@ -80,6 +80,7 @@ body {
 }
 
 #menu-tag-container {
+    display: flex;
     margin: auto;
     padding: 0px;
     width: 100%;
@@ -96,6 +97,7 @@ body {
     color: white;
     width: 15%;
     padding: 5px;
+    text-align: center;
     
     
 }
@@ -159,11 +161,26 @@ figcaption {
         width: 100%;
 
     }
+
+    #menu-tag-container {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+    }
     .menu-tags{
-        margin: 10px;
+
+        margin: auto;
+        margin-bottom: 10px;
+        /* width: 100%; */
+        justify-self: center;
     }
 
-    .menu.active {
+    .menu.active, #menu-tag-container {
         display: flex;
+        justify-items: center;
+    }
+
+    .menu.active #menu-tag-container {
+        justify-items: center;
     }
 }
