trying again - footer

--- a/styles/temples.css
+++ b/styles/temples.css
@@ -147,7 +147,7 @@ figcaption {
     margin: auto;
 }
 
-footer {
+#footer-box {
     margin: 10%;
     height: 10%;
     background-color: #4a5759;
