--- a/styles/base.css
+++ b/styles/base.css
@@ -87,7 +87,6 @@ main {
     border-radius: 25px 25px 0px 0px;
     position: relative;
     margin-top: 8px;
-    /* padding: 15px; */
  }
 
  .card :not(.top-rounded-bar) img:not(.photo) {
@@ -105,11 +104,8 @@ main {
     
     grid-column: 1/2;
     background-color: #f5f5ff;
-    outline: 4px solid #874a9c;
+    outline: 4px solid #4a3751;
     margin-right: 10px;
-    
-    
-    /* margin-top: 15; */
 
 }
 
@@ -141,7 +137,7 @@ main {
 #rightcard {
     grid-column: 2/3;
     background-color: #f5f5ff;
-    outline: 4px solid #874a9c;
+    outline: 4px solid #4a3751;
     max-width: 300px;
     /* margin-right: -4px; */
     
@@ -152,7 +148,7 @@ main {
 }
 
 .top-rounded-bar {
-    background-color: #874a9c;
+    background-color: #4a3751;
     text-align: center;
     font-size: 1.1rem;
     height: 100px;
