--- a/styles/place.css
+++ b/styles/place.css
@@ -26,7 +26,7 @@ h1 {
 h3 {
     display: inline-block;
     width: 100px;
-    /* margin: 10px 0; */
+    margin: 5px 0;
 }
 
 
@@ -48,23 +48,22 @@ header {
 
 main {
     display:grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     max-height: 1024px;
-    /* justify-content: center; */
+    justify-items: center;
     /* position: relative; */
     width: 100%;
     /* height: auto; */
 }
 
-#hero-img {
+#hero-img img{
     position:absolute;
     /* width: 100%; */
-    grid-column: 1, -4;
-    grid-row: 1, 8;
     z-index: 1;
     right: 0px;
     margin: 0;
+    max-height: 800px;
 }
 .box-head {
     height: 75px;
@@ -90,8 +89,8 @@ data, h3 {
     border-radius: 10px;
     color: black;
     /* text-align: center; */
-    margin: 15px;
-    padding: 15px
+    /* margin: 15px; */
+    padding: 25px
 
 }
 
@@ -102,15 +101,15 @@ data, h3 {
 
 
 #data {
-    grid-row: 1/7;
-    grid-column: 1/2;
-    margin-left: 10%;
+    grid-row: 1/6;
+    grid-column: 2/6;
+    /* margin-left: 10%; */
     margin-top: 10%;
 }
 
 #weather {
     grid-row: 5/-2;
-    grid-column: 3/4;
+    grid-column: 9/12;
 }
 #weather-icon {
     height: 2rem;
@@ -126,10 +125,14 @@ data, h3 {
     display: inline;
 } */
 footer {
-    background-color: var(--drab-dark-brown);
-    height: 75px;
+    background-color: var(--lion);
+    height: 35px;
     padding: 25px;
-    color: white;
+    /* color: white; */
+    z-index: 4;
+    width: 100%;
+    position: relative;
+    bottom: 0;
 
 }
 
@@ -145,6 +148,13 @@ footer {
         display: flex;
         flex-direction: column;
         height: 100%;
+        /* justify-content: center; */
     }
-
+    #data, #weather {
+        width: 75%;
+        opacity: 85%;
+    }
+    #hero-image {
+        height: 100%;
+    }
 }
