--- a/styles/place.css
+++ b/styles/place.css
@@ -3,13 +3,15 @@
     --turquoise: #79E6C9ff;
     --lion: #B58F63ff;
     --drab-dark-brown: #4B3C0Eff;
+
+    --padding: 25px;
   }
 
 html, body {
     margin: 0;
     padding: 0;
     font-family: Roboto;
-    /* font-size: 0.8rem; */
+    font-size: 0.8rem;
 
 }
 
@@ -45,25 +47,38 @@ header {
     align-content: center;
     text-align: center;
 }
-
+body {
+    max-width: fit-content;
+}
 main {
     display:grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    max-height: 1024px;
+    /* max-height: px; */
     justify-items: center;
+    max-height: 800px;
     /* position: relative; */
-    width: 100%;
     /* height: auto; */
+}
+#hero-img {
+    /* display: grid; */
+    grid-column: 1/-1;
+    grid-row: 1/-1;
+    max-height: 800px;
+
 }
 
 #hero-img img{
-    position:absolute;
-    /* width: 100%; */
+    position:relative;
+    grid-row: 1/-13;
+    grid-template-columns: 1/20;
+    width: 100%;
     z-index: 1;
     right: 0px;
     margin: 0;
     max-height: 800px;
+    object-fit: cover;
+    position: relative;
 }
 .box-head {
     height: 75px;
@@ -88,9 +103,9 @@ data, h3 {
     background-color: white;
     border-radius: 10px;
     color: black;
+    padding: var(--padding);
     /* text-align: center; */
     /* margin: 15px; */
-    padding: 25px
 
 }
 
@@ -111,15 +126,7 @@ data, h3 {
     grid-row: 5/-2;
     grid-column: 9/12;
 }
-#weather-icon {
-    height: 2rem;
-    display: inline;
-    margin-left: 0.5rem;
-}
 
-#weather-icon h2{
-    float: right;
-}
 /* #weather-info {
     text-align: left;
     display: inline;
@@ -127,7 +134,7 @@ data, h3 {
 footer {
     background-color: var(--lion);
     height: 35px;
-    padding: 25px;
+    padding: var(--padding);
     /* color: white; */
     z-index: 4;
     width: 100%;
@@ -135,7 +142,15 @@ footer {
     bottom: 0;
 
 }
-
+@media (min-width: 800px){
+    #weather h2::after  {/*targets the <h2> element inside the #weather section.*/
+        content: url("../images/weather-icon.svg");
+        height: 25px;
+        display: inline;
+        margin-left: 0.5rem;
+        /* background-color: red; */
+    }
+}
 
 
 @media (max-width: 768px){
@@ -143,18 +158,47 @@ footer {
         width: 100%;
         justify-items: center;
     }
-    main {
-        grid-template-columns: unset;
+
+    /* * {
+        padding: 15px;
+        grid: none;
+        flex-wrap: wrap;
         display: flex;
         flex-direction: column;
+        width: 100%;
+    } */
+     /* main {
+        width: 100%;
+        display: block;
+    }  */
+
+
+    main, .box-head, #data, #weather {
+        display: block;
+        width: 80%;
         height: 100%;
-        /* justify-content: center; */
+        z-index: 0;
+        flex-direction: column;
+        flex-wrap: wrap;
+        margin: 0;
+        /* text-align: center; */
+
     }
-    #data, #weather {
-        width: 75%;
-        opacity: 85%;
+
+    #hero-image img {
+        position: relative;
+        display: block;
+        z-index: 0;
+        margin: 0;
+        width: 100%;
+        height: auto;
+
+
     }
-    #hero-image {
-        height: 100%;
+    .box-head {
+        margin: 0;
+        background-color: white;
+        text-align: center;
     }
+
 }
