--- a/styles/place.css
+++ b/styles/place.css
@@ -35,6 +35,7 @@ h3 {
 header {
     background-color: var(--lion);
     height: 95px;
+    width: 100%;
     
 }
 
@@ -62,28 +63,28 @@ main {
     /* display: grid; */
     grid-column: 1/-1;
     grid-row: 1/-1;
-    max-height: 800px;
+    /* max-height: 800px; */
 
 }
 
 #hero-img img{
-    position:relative;
+    /* position:relative; */
     grid-row: 1/-13;
-    grid-template-columns: 1/-1;
+    
+    grid-column: 1/-1;
     width: 100%;
     z-index: 1;
-    right: 0px;
+    /* right: 0px; */
     margin: 0;
     /* max-height: 800px; */
     /* object-fit: cover; */
-    position: relative;
+    /* position: relative; */
 }
 .box-head {
     height: 75px;
     background-color: var(--light-sea-green);
     margin-left: -50px;
     padding-left: 65px;
-    /* width: 100%; */
     align-content: center;
 }
 
@@ -95,14 +96,15 @@ data, h3 {
     text-align: right;
 }
 
-#data, #weather {
+.boxes {
     position: sticky;
     z-index: 5;
     background-color: white;
     border-radius: 10px;
     color: black;
     padding: var(--padding);
-    /* text-align: center; */
+    border-radius: 25px;
+    margin: auto;
     /* margin: 15px; */
 
 }
@@ -125,13 +127,10 @@ data, h3 {
     grid-column: 9/12;
 }
 
-/* #weather-info {
-    text-align: left;
-    display: inline;
-} */
+
 footer {
     background-color: var(--lion);
-    height: 35px;
+    height: 15px;
     padding: var(--padding);
     /* color: white; */
     /* z-index: 4; */
@@ -139,16 +138,14 @@ footer {
     /* position: relative; */
     /* bottom: 0; */
     text-align: center;
+    clear:both;
 
 }
-@media (min-width: 600px){
-    #weather h2::after  {/*targets the <h2> element inside the #weather section.*/
-        content: url("../images/weather-icon.svg");
-        height: 25px;
-        display: inline;
-        margin-left: 0.5rem;
-        /* background-color: red; */
-    }
+#weather h2::after  {/*targets the <h2> element inside the #weather section.*/
+    content: url("../images/weather-icon.svg");
+    height: 25px;
+    display: inline;
+    margin-left: 0.5rem;
 }
 
 
@@ -158,36 +155,22 @@ footer {
         justify-items: center;
     }
 
-    #mobile-weather picture img{
-        content: url("../images/sunset_icon.svg");
-        /* display: block;
+
+    #weather h2::after  {/*targets the <h2> element inside the #weather section.*/
+        content: url("../images/weather-icon.svg");
         height: 50px;
-        width: 50px; */
+        display: block;
     }
 
-        * {
-            z-index: 0;
-            
-        }
 
-    /* * {
-        padding: 15px;
-        grid: none;
-        flex-wrap: wrap;
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-    } */
-     /* main {
-        width: 100%;
+
+
+
+    main, .boxes {
         display: block;
-    }  */
-
-
-    main, .box-head, #data, #weather {
-        display: block;
-        height: 100%;
+        height: auto;
         z-index: 0;
+        margin-left: 10%;
         /* overflow: hidden; */
         /* flex-direction: column;
         flex-wrap: wrap;
@@ -195,33 +178,32 @@ footer {
         /* text-align: center; */
 
     }
-
-    /* .boxes {
-        display: flex;
-        flex-wrap: wrap;
-    } */
-
-    #hero-image img {
-        position: relative;
-        display: block;
-        z-index: 0;
-        margin: 0;
-        width: 100%;
-        height: auto;
-        
-
-
+    .data-line {
+        text-align: center;
     }
-
     .boxes {
-        z-index: 0;
+        background-color: var(--lion);
+        margin: auto;
+        width: 80%;
+        
     }
+
+    #data {
+        margin-top: 0px;
+    }
+    #weather {
+        margin-bottom: 75px;
+    }
+    
+
     .box-head {
         margin: 0;
-        background-color: white;
+        background-color: unset;
         text-align: center;
     }
     footer {
-        z-index: 0;
+        /* z-index: 0; */
+        clear: both;
+        margin-top: 20px;
     }
 }
