--- a/styles/temples-filtered.css
+++ b/styles/temples-filtered.css
@@ -1,6 +1,6 @@
 h1, h2, h3, h4 {
     font-family: "Sofia", cursive;
-    font-size: 2.5em;
+    /* font-size: 2.5em; */
     margin: 0px;
 }
 body {
@@ -111,14 +111,13 @@ body {
 h2 {
     margin: 15px;
 }
-.main-box {
+#mainbox {
     max-width: 900px;
     margin: auto;
     display: grid;
     gap: 15px;
-    /* grid-template-rows: 1rem 1rem 1rem; */
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    justify-items: center;
+    text-align: center;
     
 }
 
@@ -134,7 +133,7 @@ h2 {
 
 
 
-.thumbnail {
+.templeCards {
     margin: 15px;
     border-color: #b0c4b1;
     border-width: 8px;
