--- a/styles/review.css
+++ b/styles/review.css
@@ -11,7 +11,7 @@ hr  {
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Roboto", sans-serif;
     color: var(--body);
     background-color: var(--background);
     max-width: 450px;
