--- a/styles/review.css
+++ b/styles/review.css
@@ -33,7 +33,7 @@ main {
     margin-bottom: 20px;
     color: var(--body);
     padding: 25px;
-    background-color: var(--accents2);
+    /* background-color: #78c2d5; */
 }
 
 label {
@@ -43,6 +43,10 @@ label {
     /* margin-bottom: 5px; */
 }
 
+input {
+    min-width: 25px;
+    min-height: 25px;
+}
 select {
     padding: 5px;
     margin-bottom: 10px;
