--- a/project/styles/styles.css
+++ b/project/styles/styles.css
@@ -37,9 +37,6 @@ header {
     width: 100%;
     position: relative;
     z-index: 0;
-    /* display:grid;
-
-    grid-template-rows: 1fr; */
 }
 
 .menu-bar {
@@ -94,13 +91,14 @@ a {
 }
 
  #header-image-box {
-    width: 80%;
     margin: auto;
     /* position: absolute; */
     z-index: 0;
     border: 10px solid var(--navy-blue);
-    grid-column: -1/4;
-    grid-row: 1/2;
+    grid-column-start: auto;
+    grid-column: 1/10;
+    grid-row: 1;
+    max-width: fit-content;
     
 } 
 
@@ -113,12 +111,24 @@ a {
 
 }
 
+.accent-bar {
+    height: 25px;
+    width: auto;
+    background-color: var(--pale-dogwood);
+    grid-column-end: 11;
+    grid-column-start: 1;
+    grid-row: 2;
+}
+
 #bike-logo-box {
-    grid-row: 3/4;
+    grid-row: 2;
+    grid-column: 4/8;
+    z-index: 2;
+    padding: 15px;
+    text-align: center;
 }
 #index-description {
-    width: 45%;
-    z-index: 0;
+    z-index: 1;
     height: 100px;
     background-color: black;
     color: white;
@@ -128,7 +138,8 @@ a {
     background-image: linear-gradient(black, rgba(60, 60, 60, 0.5), black, black, rgba(60, 60, 60, 0.5),  black);
     position: static;
     text-align: center;
-    grid-row: 4/5;
+    grid-row: 3;
+    grid-column: 6/10;
 
 
 }
@@ -145,17 +156,33 @@ a {
 
 main {
     /* font-family: 'Work Sans'; */
+
     font-family: var(--body);
     margin: auto;
-    /* position: absolute; */
     width: 80%;
+    /* position: absolute; */
     border: 5px solid #f5d3c8ff;
     /* position: relative; */
     z-index: inherit;
     /* display: flex; */
-    display: grid;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    grid-template-columns: 1fr 1fr 1fr;
+    display: inline-grid;
+    grid-template-rows: 1fr 0.5fr 10% 10% 0.5fr;
+    grid-template-columns: repeat(10, 1fr);
+}
+
+#img2-box {
+    grid-row: 3/5;
+    grid-column: 2/10;
+    margin-top: 25px;
+    z-index: 0;
+    height: fit-content;
+    
+}
+
+#img2-box img {
+    width: 100%;
+    height: 100%;
+    max-width: 550px;
 }
 
 section {
