--- a/project/styles/styles.css
+++ b/project/styles/styles.css
@@ -305,7 +305,33 @@ section {
     justify-content: center;
 }
 
+#law-quiz fieldset {
+    width: 60%;
+    display: block;
+    text-align: left;
+    margin: auto;
+    border-radius: 15px;
+}
 
+#law-quiz legend {
+    font-weight: bold;
+}
+
+#law-quiz label {
+    /* margin-top: -15px; */
+    padding: 15px;
+    display: block;
+}
+
+#law-quiz p {
+    margin-bottom: 5px;
+    margin-top: 35px;
+}
+
+#submit-button {
+    padding: 10px 35px;
+    margin: 5%;
+}
 
 .color {
     display: inline-block;
